[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/bg/road.png" type="Texture" id=1]
[ext_resource path="res://sprites/bg/forest_fg.png" type="Texture" id=2]
[ext_resource path="res://sprites/bg/forest_bg.png" type="Texture" id=3]
[ext_resource path="res://sprites/bg/bg.png" type="Texture" id=4]
[ext_resource path="res://main_scene/Wheat03.gd" type="Script" id=5]
[ext_resource path="res://main_scene/Wheat02.gd" type="Script" id=6]
[ext_resource path="res://main_scene/Wheat01.gd" type="Script" id=7]
[ext_resource path="res://player/Truck.tscn" type="PackedScene" id=8]
[ext_resource path="res://train/Train.tscn" type="PackedScene" id=9]
[ext_resource path="res://main_scene/main.gd" type="Script" id=10]
[ext_resource path="res://sprites/dicon.png" type="Texture" id=11]
[ext_resource path="res://main_scene/d_stock_label.gd" type="Script" id=12]
[ext_resource path="res://player/Cursor.tscn" type="PackedScene" id=13]
[ext_resource path="res://main_scene/cars_label.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 150 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 82.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 222.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 204.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 385, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 345, 10 )

[node name="Main" type="Node"]
script = ExtResource( 10 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 4 )

[node name="Wheat01" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 1440, 0 )
script = ExtResource( 7 )
WHEAT1_SPEED = -85.0

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Wheat01"]
position = Vector2( 0, 180 )
texture = ExtResource( 3 )
centered = false

[node name="Wheat02" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 1440, 0 )
script = ExtResource( 6 )
WHEAT2_SPEED = -110.0

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Wheat02"]
position = Vector2( 0, 180 )
texture = ExtResource( 2 )
centered = false

[node name="Road" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 640, 0 )
script = ExtResource( 5 )
WHEAT3_SPEED = -220.0

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Road"]
position = Vector2( 0, 306 )
texture = ExtResource( 1 )
centered = false

[node name="Train" parent="." instance=ExtResource( 9 )]
position = Vector2( 433, 292 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
layer = 0

[node name="Road" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 640, 0 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/Road"]
position = Vector2( 0, 306 )
texture = ExtResource( 1 )
centered = false

[node name="FrontLayer" type="CanvasLayer" parent="."]

[node name="Truck" parent="FrontLayer" instance=ExtResource( 8 )]
position = Vector2( 160, 324 )
collision_mask = 10

[node name="Bounding Boxes" type="KinematicBody2D" parent="."]
position = Vector2( 650, 360 )
collision_layer = 8

[node name="Front" type="CollisionShape2D" parent="Bounding Boxes"]
shape = SubResource( 1 )

[node name="Rear" type="CollisionShape2D" parent="Bounding Boxes"]
position = Vector2( -658, -37 )
shape = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 110.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 20 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 18.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 36.0
margin_bottom = 34.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 36.0
margin_bottom = 16.0

[node name="dicon" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 11 )

[node name="d_stock_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_top = 1.0
margin_right = 20.0
margin_bottom = 15.0
script = ExtResource( 12 )

[node name="cars_label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 36.0
margin_bottom = 34.0
script = ExtResource( 14 )

[node name="Cursor" parent="." instance=ExtResource( 13 )]
position = Vector2( 155, 86 )
collision_layer = 256
collision_mask = 256

[node name="CursorBounds" type="KinematicBody2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="CursorBounds"]
position = Vector2( -10, 222.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CursorBounds"]
position = Vector2( 650, 195.5 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="CursorBounds"]
position = Vector2( 365, -10 )
shape = SubResource( 5 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="CursorBounds"]
position = Vector2( 330, 371 )
shape = SubResource( 6 )

[connection signal="count_cars" from="." to="Panel/MarginContainer/VBoxContainer/cars_label" method="_on_Main_count_cars"]
[connection signal="count_drones" from="." to="Panel/MarginContainer/VBoxContainer/HBoxContainer/d_stock_label" method="_on_Main_count_drones"]
